# MultiRAG

./: .env.example  .gitignore  CLAUDE.md  config.py  main.py  milvus_operation.py  pyproject.toml  requirement.txt
agent/: __init__.py  agent.py  tools.py
datamodel/: __init__.py  base_models.py
db/: database.py  models.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/api/: chat.ts  index.ts  ingest.ts  knowledgeBases.ts
frontend/src/assets/: main.css
frontend/src/components/: AppLayout.vue  ChatPanel.vue  DocumentList.vue  FileUpload.vue
frontend/src/router/: index.ts
frontend/src/stores/: chat.ts  knowledgeBase.ts
frontend/src/types/: index.ts
frontend/src/utils/: format.ts
frontend/src/views/: DashboardView.vue  KBDetailView.vue  KBListView.vue
indexer/: vector_store.py
ingest/: chunker.py  embedder.py  minio_client.py  parser.py  pipeline.py
retriever/: __init__.py  reranker.py  retriever.py
routers/: chat.py  ingest.py  knowledge_base.py
