[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docling>=2.91.0",
    "dotenv>=0.9.9",
    "fastapi>=0.136.1",
    "langchain>=1.2.15",
    "langchain-core>=1.3.2",
    "langchain-openai>=1.2.1",
    "langchain-text-splitters>=1.1.2",
    "minio>=7.2.20",
    "pymilvus[model]>=2.6.12",
    "pymysql>=1.1.2",
    "python-multipart>=0.0.26",
    "sqlalchemy>=2.0.0",
    "uvicorn>=0.46.0",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
